RA_Messages stats; ASSESSED status added
-4 New columns in ra_messages table: claims, services, sum_claimed, sum_paid

- current day's billed visits now readonly

-"With doctor" visits become 'Assessed' as soon as same room is selected;

-Help file updated

- Several bugs fixed in RaMessages controller

--- a/app/views/claims/index.html.erb
+++ b/app/views/claims/index.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, 'All claims') %>
 
+<div class='col-sm-12'>
 <%= form_with url: claims_index_path do |f| %>
   <div class="row form-control"> 
 <% unless current_user.doctor? %>
@@ -23,6 +24,7 @@
     </div>
   </div>
 <% end %>
+</div>
 
 <table class="tbl table-hover"> 
   <thead>
