--- a/app/views/ra_messages/index.html.erb
+++ b/app/views/ra_messages/index.html.erb
@@ -6,10 +6,13 @@
           <th>File #</th>
 	  <th>Date Paid</th>
           <th>Group</th>
- 	  <th class='tbl_lg'>Payee</th>
- 	  <th>Amount</th>
+ 	  <th class="tbl_xlg">Payee</th>
+ 	  <th class="tbl-sm">Claims</th>
+ 	  <th class="tbl-sm">Services</th>
+ 	  <th>Claimed Amt</th>
+ 	  <th>Paid Amt</th>
+ 	  <th>Net Paid</th>
  	  <th>Pay Method</th>
-          <th>Bil Agent</th>
       </tr>
   </thead>
   <tbody>
