--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -17,7 +17,7 @@
     </tr>
   </thead>
   <tbody>
-    <%= render @schedules, as: :schedule,  remote: device_is_desktop? %>
+    <%= render @schedules, remote: device_is_desktop? %>
   </tbody>
 </table>
 
