--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,12 +10,12 @@
 	<li>Logged in <%= current_user.role %>: <%= link_to "#{current_user.name}", edit_user_path(current_user.id) %></li>
         <li><%= link_to "Logout", logout_path, method: :delete %></li>
       <% end %>
-      <li style="width:50px">&nbsp;</li>
+      <li style="width:40px">&nbsp;</li>
       <li><%= link_to "About", about_path, target: '_new' %></li>
       <li><%= link_to "Help", help_path, target: '_new' %></li>
       <li><%= link_to "Contact", contact_path, target: '_new' %></li>
       <li><%= link_to "News", news_path, target: '_new' %></li>
-      <li><%= link_to "Terms of Use", terms_path, target: '_new' %></li>
+      <li><%= link_to "Terms", terms_path, target: '_new' %></li>
       <li><%= link_to "Privacy Policy", privacy_path, target: '_new' %></li>
       </small>
     </ul>
