--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -4,6 +4,9 @@
 
 	<div class="panel panel-default">
 		<div class="panel-body news-panel-body">
+			<li> RA Messages page now shows billing cycle totals for claims, services as well as total amounts submitted and paid </li> 
+			<li> Help section updated (staff access level)</li>
+			<li> 'Assessed' and 'With Doctor' statuses added. This will be used for better patient tracking as well as in wait time calculations and Doctors pages </li> 
 			<li> Patients charts are now available in Docs drop-down menu </li>
 			<li> Keyboard <left> <right> arrows can now be used for navigation in pages with page selector </li>
 			<li> Scanned Day Charts now cover period 20-Jan-2006 - 31-Aug-2007 </li>
