--- a/app/views/layouts/_admin.html.erb
+++ b/app/views/layouts/_admin.html.erb
@@ -6,5 +6,6 @@
  <li><%= link_to "Export Files", export_files_path %> </li>
  <li><%= link_to "EDT Files", edt_files_path  %> </li> 
  <li><%= link_to "Budget", budget_path  %> </li> 
+ <li><%= link_to "Visits This Cycle", billed_visits_path  %> </li> 
 </ul>
 </li>
